# django-langchain-starter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-langchain-django-app-code.txt  pyproject.toml  repopack-output.txt  sample.env
backend/: Dockerfile  api_documentation.rest  pyproject.toml  sample.env
backend/api/: models.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/api/services/llm_providers/: huggingface_service.py  openai_service.py
backend/mysite/: settings.py
backend/server/: settings.py  urls.py
mysite/: settings.py
