[tool.poetry]
name = "django-langchain-starter"
version = "0.1.0"
description = "A Django project starter template with LangChain integrations"
authors = ["vivmagarwal <vivmagarwal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-openai = "^0.2.3"
tokenizers = "0.19.1"
langchain-huggingface = "^0.1.0"
django = "^5.1.2"
gunicorn = "^23.0.0"
django-environ = "^0.11.2"


[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
